# ml-api-gateway

./: .env  main.py  pyproject.toml
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  base.py  dependencies.py  monitor.py  reset_api_key.py  user_login.py  user_register.py  utils.py
app/core/: __init__.py  monitoring.py  security.py
app/db/: __init__.py  database.py  models.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  auth_schemas.py  schemas.py  user.py  user_create.py  user_schemas.py
app/services/: auth_services.py  services.py  user_service.py
tests/: conftest.py  test_database.py  test_monitoring.py  test_reset_api_key.py  test_schemas.py  test_security.py  test_services.py  test_user_create_schema.py  test_user_login.py  test_user_register.py  test_user_register_schema.py  test_user_schema.py  test_user_service.py
