[tool.poetry]
name = "ml-api-gateway"
version = "0.1.0"
description = ""
authors = ["dewma <dewmal@syigen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
httpx = "^0.28.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
fastapi-login = "^1.10.3"
email-validator = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
